# Practica_1_EDD_PS2026_V2

./: .gitignore  CMakeLists.txt  CmakeScript.sh  Makefile  README.md
docs/: AnalisisComplejidad.md  ManualUsuario.md
include/: Carta.h  CartaAccion.h  CartaComodin.h  CartaFlip.h  CartaNumero.h  CartaPersonalizada.h  Colores.h  Enums.h  EstadoJuego.h  Jugador.h  ListaCartas.h  ListaCircular.h  Mazo.h  Reglas.h  Stack.h  VistaConsola.h
src/: CartaAccion.cpp  CartaComodin.cpp  CartaFlip.cpp  CartaNumero.cpp  CartaPersonalizada.cpp  Jugador.cpp  ListaCircular.cpp  Mazo.cpp  Reglas.cpp  VistaConsola.cpp  main.cpp
tests/: test_stack.cpp
